minor text fixes

--- a/tex/research_agenda_v2.tex
+++ b/tex/research_agenda_v2.tex
@@ -14,6 +14,7 @@
 \usepackage{booktabs}
 
 %General Formating
+\renewcommand*\familydefault{\sfdefault}
 \usepackage[letterpaper, portrait, margin=1.5in]{geometry}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
