pushing data and new file

--- a/output/table5.tex
+++ b/output/table5.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Jun 11, 2018 - 04:54:26 PM
+% Date and time: Tue, Jun 12, 2018 - 10:13:59 AM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Table 5 Results} 
@@ -12,528 +12,579 @@
 \cline{2-2} 
 \\[-1.8ex] & \multicolumn{1}{c}{lbid} \\ 
 \hline \\[-1.8ex] 
- inc & -0.966^{***} \\ 
-  & (0.101) \\ 
+ inc & -0.314^{***} \\ 
+  & (0.099) \\ 
   & \\ 
- type\_dumlfc & -0.006^{***} \\ 
+ type\_dumlfc & -0.005^{**} \\ 
   & (0.002) \\ 
   & \\ 
  type\_dumlfw & -0.049^{***} \\ 
   & (0.002) \\ 
   & \\ 
- type\_dumwc & 0.055^{***} \\ 
+ type\_dumwc & 0.052^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lfmo & 0.194^{***} \\ 
-  & (0.017) \\ 
+ lfmo & 23.985^{***} \\ 
+  & (1.437) \\ 
   & \\ 
- lqstop & -0.041^{***} \\ 
+ lqstop & -0.010^{**} \\ 
   & (0.004) \\ 
   & \\ 
- lback & -0.010^{***} \\ 
+ lback & -0.009^{***} \\ 
   & (0.001) \\ 
   & \\ 
- esc & -0.011^{***} \\ 
+ esc & -0.017^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lnum & 0.007^{**} \\ 
+ lnum & 0.006^{**} \\ 
   & (0.003) \\ 
   & \\ 
- sys\_dumALEDO & 0.001 \\ 
-  & (0.018) \\ 
+ year\_dum1976 & -2.097^{***} \\ 
+  & (0.145) \\ 
   & \\ 
- sys\_dumALLEN & 0.067^{***} \\ 
-  & (0.021) \\ 
+ year\_dum1977 & -1.812^{***} \\ 
+  & (0.132) \\ 
   & \\ 
- sys\_dumALVARADO & 0.024 \\ 
-  & (0.019) \\ 
+ year\_dum1978 & -3.015^{***} \\ 
+  & (0.222) \\ 
   & \\ 
- sys\_dumALVORD & -0.119^{***} \\ 
-  & (0.018) \\ 
+ year\_dum1979 & -5.848^{***} \\ 
+  & (0.392) \\ 
   & \\ 
- sys\_dumANNA & -0.027 \\ 
-  & (0.021) \\ 
+ year\_dum1980 & -7.404^{***} \\ 
+  & (0.485) \\ 
   & \\ 
- sys\_dumARGYLE & -0.039^{**} \\ 
-  & (0.020) \\ 
+ year\_dum1981 & -8.867^{***} \\ 
+  & (0.575) \\ 
   & \\ 
- sys\_dumARLINGTON & 0.106^{***} \\ 
-  & (0.022) \\ 
+ year\_dum1982 & -8.707^{***} \\ 
+  & (0.565) \\ 
   & \\ 
- sys\_dumAUBREY & -0.030 \\ 
-  & (0.025) \\ 
+ year\_dum1983 & -8.855^{***} \\ 
+  & (0.571) \\ 
   & \\ 
- sys\_dumAUSTIN & 0.044^{*} \\ 
-  & (0.025) \\ 
+ year\_dum1984 & -8.350^{***} \\ 
+  & (0.542) \\ 
   & \\ 
- sys\_dumAZLE & 0.043^{**} \\ 
-  & (0.019) \\ 
+ year\_dum1985 & -7.502^{***} \\ 
+  & (0.490) \\ 
   & \\ 
- sys\_dumBELLS & -0.021 \\ 
-  & (0.019) \\ 
+ year\_dum1986 & -7.646^{***} \\ 
+  & (0.500) \\ 
   & \\ 
- sys\_dumBELTON & -0.171^{***} \\ 
-  & (0.021) \\ 
+ year\_dum1987 & -8.455^{***} \\ 
+  & (0.548) \\ 
   & \\ 
- sys\_dumBIRDVILLE & 0.085^{***} \\ 
-  & (0.021) \\ 
+ year\_dum1988 & -7.689^{***} \\ 
+  & (0.500) \\ 
   & \\ 
- sys\_dumBLAND & 0.030 \\ 
-  & (0.031) \\ 
+ year\_dum1989 & -9.446^{***} \\ 
+  & (0.605) \\ 
   & \\ 
- sys\_dumBLUE RIDGE & 0.034^{*} \\ 
-  & (0.020) \\ 
+ year\_dum1990 & -10.968^{***} \\ 
+  & (0.699) \\ 
   & \\ 
- sys\_dumBLUM & -0.062^{***} \\ 
-  & (0.020) \\ 
+ year\_dum1991 & -7.428^{***} \\ 
+  & (0.484) \\ 
   & \\ 
- sys\_dumBOWIE & 0.010 \\ 
-  & (0.019) \\ 
+ year\_dum1992 & -9.379^{***} \\ 
+  & (0.599) \\ 
   & \\ 
- sys\_dumBOYD & -0.124^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumBRIDGEPORT & -0.081^{***} \\ 
+ sys\_dumALEDO & -0.023 \\ 
   & (0.017) \\ 
   & \\ 
- sys\_dumBROCK & 0.019 \\ 
-  & (0.025) \\ 
+ sys\_dumALLEN & -0.005 \\ 
+  & (0.020) \\ 
   & \\ 
- sys\_dumBURLESON & 0.049^{**} \\ 
-  & (0.022) \\ 
+ sys\_dumALVARADO & 0.004 \\ 
+  & (0.018) \\ 
   & \\ 
- sys\_dumCARROLL & 0.048^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCARROLLTON & 0.127^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumCASTLEBERRY & 0.052^{***} \\ 
+ sys\_dumALVORD & -0.093^{***} \\ 
   & (0.017) \\ 
   & \\ 
- sys\_dumCEDAR HILL & 0.060^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCELESTE & 0.021 \\ 
+ sys\_dumANNA & -0.022 \\ 
   & (0.020) \\ 
   & \\ 
- sys\_dumCELINA & -0.025 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumCHICO & -0.102^{***} \\ 
+ sys\_dumARGYLE & -0.036^{*} \\ 
   & (0.019) \\ 
   & \\ 
- sys\_dumCLEBURNE & 0.053^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCOLLINSVILLE & -0.034 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumCOMANCHE & -0.100^{***} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumCOMMUNITY & 0.009 \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumCOMO-PICKTON & -0.043^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCOPPELL & 0.034^{*} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumCRANDALL & 0.008 \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumCROWLEY & 0.087^{***} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumDALLAS & 0.095^{***} \\ 
+ sys\_dumARLINGTON & -0.002 \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumDE LEON & -0.131^{***} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumDE SOTO & 0.073^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumDECATUR & -0.079^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumDENTON & 0.079^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumDUBLIN & -0.077^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumDUNCANVILLE & 0.090^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumEAGLE MOUNTAIN-SAGINAW & 0.054^{***} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumEAST CENTRAL & 0.082^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumECTOR & 0.034 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumEDGEWOOD & 0.056^{**} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumENNIS & 0.044^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumERA & 0.063^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumEUSTACE & 0.056^{**} \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumEVERMAN & 0.062^{***} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumFARMERSVILLE & 0.020 \\ 
+ sys\_dumAUBREY & -0.004 \\ 
   & (0.023) \\ 
   & \\ 
- sys\_dumFERRIS & 0.021 \\ 
-  & (0.019) \\ 
+ sys\_dumAUSTIN & -0.596^{***} \\ 
+  & (0.039) \\ 
   & \\ 
- sys\_dumFORNEY & -0.011 \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumFORT WORTH & 0.100^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumFRISCO & 0.035 \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGARLAND & 0.138^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGARNER & -0.045 \\ 
-  & (0.031) \\ 
-  & \\ 
- sys\_dumGLEN ROSE & -0.003 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumGODLEY & 0.009 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumGORDON & -0.114^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGRAFORD & -0.097^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGRANBURY & 0.079^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumGRAND PRAIRIE & 0.132^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGRANDVIEW & -0.008 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumGRAPEVINE-COLLEYVILLE & 0.064^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumGREENVILLE & 0.097^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumGROESBECK & -0.097^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGUNTER & -0.035 \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumHARLANDALE & -0.033 \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumHEB & 0.133^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumHICO & -0.013 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumHIGHLAND PARK & -0.001 \\ 
+ sys\_dumAZLE & -0.002 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumHONEY GROVE & -0.081^{***} \\ 
-  & (0.021) \\ 
+ sys\_dumBELLS & -0.020 \\ 
+  & (0.018) \\ 
   & \\ 
- sys\_dumHUCKABAY & -0.061^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumIREDELE & -0.145^{***} \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumIRVING & 0.080^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumITASCA & 0.005 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumJACKSBORO & -0.118^{***} \\ 
+ sys\_dumBELTON & -0.476^{***} \\ 
   & (0.024) \\ 
   & \\ 
- sys\_dumJOSHUA & 0.039^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumJUDSON & 0.021 \\ 
+ sys\_dumBIRDVILLE & 0.017 \\ 
   & (0.020) \\ 
   & \\ 
- sys\_dumKELLER & 0.101^{***} \\ 
-  & (0.019) \\ 
+ sys\_dumBLAND & 0.027 \\ 
+  & (0.029) \\ 
   & \\ 
- sys\_dumKENNEDALE & 0.007 \\ 
+ sys\_dumBLUE RIDGE & 0.015 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumKILLEEN & 0.195^{***} \\ 
+ sys\_dumBLUM & -0.308^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumBOWIE & -0.010 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumBOYD & -0.129^{***} \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumBRIDGEPORT & -0.090^{***} \\ 
+  & (0.016) \\ 
+  & \\ 
+ sys\_dumBROCK & 0.045^{*} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumBURLESON & 0.003 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumCARROLL & 0.010 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCARROLLTON & 0.042^{**} \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumCASTLEBERRY & 0.021 \\ 
+  & (0.016) \\ 
+  & \\ 
+ sys\_dumCEDAR HILL & 0.008 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCELESTE & 0.040^{**} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumCELINA & -0.015 \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumKRUM & -0.025 \\ 
+ sys\_dumCHICO & -0.096^{***} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCLEBURNE & 0.012 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCOLLINSVILLE & -0.020 \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumLA VEGA & -0.142^{***} \\ 
+ sys\_dumCOMANCHE & -0.377^{***} \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumCOMMUNITY & -0.014 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumCOMO-PICKTON & -0.050^{***} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCOPPELL & -0.021 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumCRANDALL & -0.012 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumCROWLEY & 0.043^{**} \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumDALLAS & -0.011 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumDE LEON & -0.374^{***} \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumDE SOTO & 0.013 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumDECATUR & -0.106^{***} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumDENTON & 0.005 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumDUBLIN & -0.326^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumDUNCANVILLE & 0.024 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumEAGLE MOUNTAIN-SAGINAW & 0.013 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumEAST CENTRAL & -0.657^{***} \\ 
+  & (0.044) \\ 
+  & \\ 
+ sys\_dumECTOR & 0.063^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumEDGEWOOD & -0.723^{***} \\ 
+  & (0.046) \\ 
+  & \\ 
+ sys\_dumENNIS & -0.015 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumERA & 0.057^{***} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumEUSTACE & -0.219^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumEVERMAN & 0.020 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumFARMERSVILLE & -0.002 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumFERRIS & -0.027 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumFORNEY & -0.020 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumFORT WORTH & -0.010 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumFRISCO & -0.001 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumGARLAND & 0.026 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumGARNER & 0.001 \\ 
+  & (0.029) \\ 
+  & \\ 
+ sys\_dumGLEN ROSE & -0.044^{**} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumGODLEY & 0.002 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumGORDON & 0.226^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumGRAFORD & 0.271^{***} \\ 
+  & (0.029) \\ 
+  & \\ 
+ sys\_dumGRANBURY & 0.006 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumGRAND PRAIRIE & 0.036^{*} \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumGRANDVIEW & -0.038^{**} \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumGRAPEVINE-COLLEYVILLE & 0.009 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumGREENVILLE & 0.028 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumGROESBECK & -0.379^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumGUNTER & -0.020 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumHARLANDALE & -0.794^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumHEB & 0.043^{**} \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumHICO & -0.278^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumHIGHLAND PARK & -0.019 \\ 
+  & (0.016) \\ 
+  & \\ 
+ sys\_dumHONEY GROVE & -0.069^{***} \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumHUCKABAY & -0.298^{***} \\ 
+  & (0.025) \\ 
+  & \\ 
+ sys\_dumIREDELE & -0.328^{***} \\ 
+  & (0.027) \\ 
+  & \\ 
+ sys\_dumIRVING & -0.014 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumITASCA & -0.254^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumJACKSBORO & -0.365^{***} \\ 
   & (0.026) \\ 
   & \\ 
- sys\_dumLA VERNIA & -0.026 \\ 
+ sys\_dumJOSHUA & 0.013 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumLAKE DALLAS & 0.018 \\ 
+ sys\_dumJUDSON & -0.735^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumKELLER & 0.043^{**} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumKENNEDALE & -0.012 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumKILLEEN & -0.151^{***} \\ 
   & (0.026) \\ 
   & \\ 
- sys\_dumLAKE WORTH & -0.010 \\ 
-  & (0.019) \\ 
+ sys\_dumKRUM & -0.021 \\ 
+  & (0.020) \\ 
   & \\ 
- sys\_dumLANCASTER & 0.047^{***} \\ 
+ sys\_dumLA VEGA & -0.408^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumLA VERNIA & -0.703^{***} \\ 
+  & (0.043) \\ 
+  & \\ 
+ sys\_dumLAKE DALLAS & 0.002 \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumLAKE WORTH & -0.029 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumLEONARD & -0.024 \\ 
-  & (0.022) \\ 
+ sys\_dumLANCASTER & -0.003 \\ 
+  & (0.017) \\ 
   & \\ 
- sys\_dumLEWISVILLE & 0.102^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumLINDSAY & 0.019 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumLINGLEVILLE & -0.093^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumLITTLE ELM & 0.050^{**} \\ 
+ sys\_dumLEONARD & -0.016 \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumLOVEJOY & 0.171^{***} \\ 
+ sys\_dumLEWISVILLE & 0.016 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumLINDSAY & 0.023 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumLINGLEVILLE & -0.328^{***} \\ 
   & (0.025) \\ 
   & \\ 
- sys\_dumMABANK & 0.005 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumMANSFIELD & 0.048^{**} \\ 
+ sys\_dumLITTLE ELM & 0.020 \\ 
   & (0.019) \\ 
   & \\ 
- sys\_dumMARLIN & -0.126^{***} \\ 
+ sys\_dumLOVEJOY & 0.178^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumMABANK & -0.038^{*} \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumMAYPEARL & -0.009 \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumMCKINNEY & 0.070^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumMESQUITE & 0.149^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumMIDLOTHIAN & 0.018 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumMILFORD & -0.068^{***} \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumMILLER GROVE & -0.029 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumMILLSAP & 0.111^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumMINERAL WELLS & 0.037^{*} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumMORGAN & -0.075^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumMORGAN MILL & -0.072^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumMOUNT VERNON & -0.056^{***} \\ 
+ sys\_dumMANSFIELD & -0.014 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumNORTH EAST & 0.112^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumNORTHSIDE & 0.089^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumPALMER & -0.021 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumPARADISE & -0.156^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumPARIS & 0.099^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumPEASTER & 0.306^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumPERRIN-WHITT & -0.063^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumPLANO & 0.128^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumPOOLVILLE & 0.207^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumPOTTSBORO & 0.034^{*} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumPRINCETON & 0.051^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumPROSPER & 0.040 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumRED OAK & 0.068^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumRICHARDSON & 0.119^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumRIO VISTA & -0.017 \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumSALADO & -0.131^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumSAN ANTONIO & 0.007 \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumSANGER & -0.004 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumSANTO & -0.072^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumSAVOY & -0.047^{*} \\ 
+ sys\_dumMARLIN & -0.411^{***} \\ 
   & (0.026) \\ 
   & \\ 
- sys\_dumSHERMAN & 0.081^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumSOMERSET & -0.131^{***} \\ 
+ sys\_dumMAYPEARL & 0.006 \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumSOUTHSIDE & 0.052^{***} \\ 
-  & (0.019) \\ 
+ sys\_dumMCKINNEY & 0.009 \\ 
+  & (0.018) \\ 
   & \\ 
- sys\_dumSOUTHWEST & 0.061^{***} \\ 
-  & (0.020) \\ 
+ sys\_dumMESQUITE & 0.039^{*} \\ 
+  & (0.022) \\ 
   & \\ 
- sys\_dumSPRINGTOWN & 0.025 \\ 
-  & (0.020) \\ 
+ sys\_dumMIDLOTHIAN & -0.019 \\ 
+  & (0.018) \\ 
   & \\ 
- sys\_dumSTEPHENVILLE & 0.010 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumSTRAWN & -0.150^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumSULPHER SPRNG & 0.033^{*} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumSUNNYVALE & -0.047^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumTEMPLE & -0.084^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumTERRELL & 0.052^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumTOLAR & -0.024 \\ 
+ sys\_dumMILFORD & -0.048^{**} \\ 
   & (0.023) \\ 
   & \\ 
- sys\_dumVALLEY VIEW & 0.023 \\ 
+ sys\_dumMILLER GROVE & 0.001 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumMILLSAP & 0.106^{***} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumMINERAL WELLS & 0.334^{***} \\ 
+  & (0.027) \\ 
+  & \\ 
+ sys\_dumMORGAN & -0.297^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumMORGAN MILL & -0.276^{***} \\ 
+  & (0.027) \\ 
+  & \\ 
+ sys\_dumMOUNT VERNON & -0.062^{***} \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumNORTH EAST & -0.680^{***} \\ 
+  & (0.046) \\ 
+  & \\ 
+ sys\_dumNORTHSIDE & -0.709^{***} \\ 
+  & (0.047) \\ 
+  & \\ 
+ sys\_dumPALMER & -0.014 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumPARADISE & -0.142^{***} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumPARIS & 0.031 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumPEASTER & 0.307^{***} \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumPERRIN-WHITT & -0.303^{***} \\ 
+  & (0.026) \\ 
+  & \\ 
+ sys\_dumPLANO & 0.036^{*} \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumPOOLVILLE & 0.217^{***} \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumPOTTSBORO & 0.003 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumPRINCETON & 0.009 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumPROSPER & 0.056^{**} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumRED OAK & 0.026 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumRICHARDSON & 0.029 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumRIO VISTA & -0.016 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumSALADO & -0.372^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumSAN ANTONIO & -0.769^{***} \\ 
+  & (0.046) \\ 
+  & \\ 
+ sys\_dumSANGER & -0.026 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumSANTO & 0.275^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumSAVOY & -0.033 \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumSHERMAN & -0.003 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumSOMERSET & -0.797^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumSOUTHSIDE & -0.692^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumSOUTHWEST & -0.700^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumSPRINGTOWN & -0.018 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumSTEPHENVILLE & -0.252^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumSTRAWN & 0.210^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumSULPHER SPRNG & -0.015 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumSUNNYVALE & -0.011 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumTEMPLE & -0.401^{***} \\ 
+  & (0.025) \\ 
+  & \\ 
+ sys\_dumTERRELL & 0.005 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumTOLAR & -0.023 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumVALLEY VIEW & 0.021 \\ 
+  & (0.033) \\ 
+  & \\ 
+ sys\_dumVENUS & 0.007 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumWALNUT SPRGS & -0.349^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumWAXAHACHIE & -0.011 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumWEATHERFORD & -0.014 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumWHITE SETTLEMENT & -0.015 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumWHITESBORO & 0.090^{***} \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumWHITNEY & -0.316^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumWILMER-HUTCHINS & 0.005 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumWOLFE CITY & 0.023 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumWYLIE & 0.015 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumYANTIS & -0.016 \\ 
+  & (0.020) \\ 
+  & \\ 
+ inc:type\_dumlfc & 0.009^{*} \\ 
+  & (0.005) \\ 
+  & \\ 
+ inc:type\_dumlfw & 0.004 \\ 
+  & (0.005) \\ 
+  & \\ 
+ inc:type\_dumwc & 0.004 \\ 
+  & (0.005) \\ 
+  & \\ 
+ inc:lfmo & 0.119^{***} \\ 
   & (0.036) \\ 
   & \\ 
- sys\_dumVENUS & 0.003 \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumWALNUT SPRGS & -0.110^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWAXAHACHIE & 0.041^{**} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumWEATHERFORD & 0.036^{*} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWHITE SETTLEMENT & 0.015 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWHITESBORO & 0.111^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWHITNEY & -0.087^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWILMER-HUTCHINS & 0.080^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumWOLFE CITY & 0.007 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumWYLIE & 0.079^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumYANTIS & -0.014 \\ 
-  & (0.021) \\ 
-  & \\ 
- inc:type\_dumlfc & 0.010^{*} \\ 
-  & (0.005) \\ 
-  & \\ 
- inc:type\_dumlfw & 0.006 \\ 
-  & (0.005) \\ 
-  & \\ 
- inc:type\_dumwc & 0.001 \\ 
-  & (0.005) \\ 
-  & \\ 
- inc:lfmo & 0.364^{***} \\ 
-  & (0.037) \\ 
-  & \\ 
- inc:lqstop & -0.005^{**} \\ 
+ inc:lqstop & -0.006^{***} \\ 
   & (0.002) \\ 
   & \\ 
- inc:lback & 0.006^{***} \\ 
+ inc:lback & 0.004^{***} \\ 
   & (0.002) \\ 
   & \\ 
- inc:esc & -0.006 \\ 
+ inc:esc & -0.001 \\ 
   & (0.004) \\ 
   & \\ 
- inc:lnum & -0.029^{***} \\ 
-  & (0.005) \\ 
+ inc:lnum & -0.020^{***} \\ 
+  & (0.004) \\ 
   & \\ 
- Constant & -2.011^{***} \\ 
-  & (0.051) \\ 
+ Constant & -57.550^{***} \\ 
+  & (3.312) \\ 
   & \\ 
 \hline \\[-1.8ex] 
 Observations & \multicolumn{1}{c}{11,614} \\ 
-R$^{2}$ & \multicolumn{1}{c}{0.443} \\ 
-Adjusted R$^{2}$ & \multicolumn{1}{c}{0.434} \\ 
-Residual Std. Error & \multicolumn{1}{c}{0.076 (df = 11442)} \\ 
-F Statistic & \multicolumn{1}{c}{53.114$^{***}$ (df = 171; 11442)} \\ 
+R$^{2}$ & \multicolumn{1}{c}{0.516} \\ 
+Adjusted R$^{2}$ & \multicolumn{1}{c}{0.508} \\ 
+Residual Std. Error & \multicolumn{1}{c}{0.071 (df = 11425)} \\ 
+F Statistic & \multicolumn{1}{c}{64.891$^{***}$ (df = 188; 11425)} \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
