--- a/output/table6.tex
+++ b/output/table6.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Mon, Jun 11, 2018 - 04:54:38 PM
+% Date and time: Tue, Jun 12, 2018 - 10:14:12 AM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Table 6 Results} 
@@ -12,507 +12,558 @@
 \cline{2-2} 
 \\[-1.8ex] & \multicolumn{1}{c}{lbid} \\ 
 \hline \\[-1.8ex] 
- inc & -0.059^{***} \\ 
+ inc & -0.057^{***} \\ 
   & (0.002) \\ 
   & \\ 
- type\_dumlfc & -0.005^{**} \\ 
+ type\_dumlfc & -0.003^{*} \\ 
   & (0.002) \\ 
   & \\ 
  type\_dumlfw & -0.048^{***} \\ 
   & (0.002) \\ 
   & \\ 
- type\_dumwc & 0.055^{***} \\ 
+ type\_dumwc & 0.052^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lfmo & 0.260^{***} \\ 
-  & (0.015) \\ 
+ lfmo & 24.322^{***} \\ 
+  & (1.437) \\ 
   & \\ 
- lestqty & -0.044^{***} \\ 
+ lestqty & -0.012^{***} \\ 
   & (0.004) \\ 
   & \\ 
- lnostop & -0.056^{***} \\ 
-  & (0.020) \\ 
+ lnostop & -0.046^{**} \\ 
+  & (0.019) \\ 
   & \\ 
  lback & -0.008^{***} \\ 
   & (0.001) \\ 
   & \\ 
- esc & -0.012^{***} \\ 
+ esc & -0.016^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lnum & -0.001 \\ 
+ lnum & 0.00001 \\ 
   & (0.002) \\ 
   & \\ 
- sys\_dumALEDO & 0.026 \\ 
-  & (0.019) \\ 
+ year\_dum1976 & -2.106^{***} \\ 
+  & (0.145) \\ 
   & \\ 
- sys\_dumALLEN & 0.045^{**} \\ 
-  & (0.022) \\ 
+ year\_dum1977 & -1.821^{***} \\ 
+  & (0.132) \\ 
   & \\ 
- sys\_dumALVARADO & 0.054^{***} \\ 
-  & (0.020) \\ 
+ year\_dum1978 & -3.002^{***} \\ 
+  & (0.222) \\ 
   & \\ 
- sys\_dumALVORD & -0.142^{***} \\ 
-  & (0.019) \\ 
+ year\_dum1979 & -5.868^{***} \\ 
+  & (0.392) \\ 
   & \\ 
- sys\_dumANNA & -0.007 \\ 
-  & (0.021) \\ 
+ year\_dum1980 & -7.447^{***} \\ 
+  & (0.485) \\ 
   & \\ 
- sys\_dumARGYLE & -0.106^{***} \\ 
-  & (0.024) \\ 
+ year\_dum1981 & -8.929^{***} \\ 
+  & (0.575) \\ 
   & \\ 
- sys\_dumARLINGTON & 0.139^{***} \\ 
-  & (0.024) \\ 
+ year\_dum1982 & -8.768^{***} \\ 
+  & (0.565) \\ 
   & \\ 
- sys\_dumAUBREY & 0.033 \\ 
-  & (0.025) \\ 
+ year\_dum1983 & -8.917^{***} \\ 
+  & (0.571) \\ 
   & \\ 
- sys\_dumAUSTIN & 0.089^{***} \\ 
-  & (0.026) \\ 
+ year\_dum1984 & -8.406^{***} \\ 
+  & (0.542) \\ 
   & \\ 
- sys\_dumAZLE & 0.075^{***} \\ 
-  & (0.020) \\ 
+ year\_dum1985 & -7.545^{***} \\ 
+  & (0.490) \\ 
   & \\ 
- sys\_dumBELLS & -0.045^{**} \\ 
-  & (0.020) \\ 
+ year\_dum1986 & -7.691^{***} \\ 
+  & (0.501) \\ 
   & \\ 
- sys\_dumBELTON & -0.159^{***} \\ 
-  & (0.021) \\ 
+ year\_dum1987 & -8.510^{***} \\ 
+  & (0.548) \\ 
   & \\ 
- sys\_dumBIRDVILLE & 0.125^{***} \\ 
-  & (0.022) \\ 
+ year\_dum1988 & -7.734^{***} \\ 
+  & (0.501) \\ 
   & \\ 
- sys\_dumBLAND & -0.015 \\ 
-  & (0.033) \\ 
+ year\_dum1989 & -9.514^{***} \\ 
+  & (0.605) \\ 
   & \\ 
- sys\_dumBLUE RIDGE & -0.031 \\ 
-  & (0.024) \\ 
+ year\_dum1990 & -11.058^{***} \\ 
+  & (0.699) \\ 
   & \\ 
- sys\_dumBLUM & -0.130^{***} \\ 
-  & (0.024) \\ 
+ year\_dum1991 & -7.471^{***} \\ 
+  & (0.484) \\ 
   & \\ 
- sys\_dumBOWIE & 0.042^{**} \\ 
-  & (0.019) \\ 
+ year\_dum1992 & -9.447^{***} \\ 
+  & (0.599) \\ 
   & \\ 
- sys\_dumBOYD & -0.097^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumBRIDGEPORT & -0.052^{***} \\ 
+ sys\_dumALEDO & -0.008 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumBROCK & -0.026 \\ 
-  & (0.029) \\ 
+ sys\_dumALLEN & -0.018 \\ 
+  & (0.020) \\ 
   & \\ 
- sys\_dumBURLESON & 0.080^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumCARROLL & 0.058^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCARROLLTON & 0.087^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumCASTLEBERRY & 0.083^{***} \\ 
+ sys\_dumALVARADO & 0.021 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumCEDAR HILL & 0.043^{**} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumCELESTE & -0.007 \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumCELINA & -0.021 \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumCHICO & -0.127^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumCLEBURNE & 0.060^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCOLLINSVILLE & -0.065^{***} \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumCOMANCHE & -0.119^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumCOMMUNITY & -0.020 \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumCOMO-PICKTON & -0.108^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumCOPPELL & 0.014 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumCRANDALL & 0.013 \\ 
+ sys\_dumALVORD & -0.106^{***} \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumCROWLEY & 0.117^{***} \\ 
-  & (0.019) \\ 
+ sys\_dumANNA & -0.006 \\ 
+  & (0.020) \\ 
   & \\ 
- sys\_dumDALLAS & 0.141^{***} \\ 
+ sys\_dumARGYLE & -0.075^{***} \\ 
   & (0.023) \\ 
   & \\ 
- sys\_dumDE LEON & -0.107^{***} \\ 
+ sys\_dumARLINGTON & 0.019 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumAUBREY & 0.039^{*} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumAUSTIN & -0.574^{***} \\ 
+  & (0.039) \\ 
+  & \\ 
+ sys\_dumAZLE & 0.017 \\ 
   & (0.019) \\ 
   & \\ 
- sys\_dumDE SOTO & 0.083^{***} \\ 
+ sys\_dumBELLS & -0.034^{*} \\ 
   & (0.019) \\ 
   & \\ 
- sys\_dumDECATUR & -0.100^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumDENTON & 0.117^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumDUBLIN & -0.099^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumDUNCANVILLE & 0.124^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumEAGLE MOUNTAIN-SAGINAW & 0.069^{***} \\ 
-  & (0.018) \\ 
-  & \\ 
- sys\_dumEAST CENTRAL & 0.115^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumECTOR & 0.031 \\ 
+ sys\_dumBELTON & -0.471^{***} \\ 
   & (0.025) \\ 
   & \\ 
- sys\_dumEDGEWOOD & 0.095^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumENNIS & 0.079^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumERA & 0.017 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumEUSTACE & 0.011 \\ 
-  & (0.028) \\ 
-  & \\ 
- sys\_dumEVERMAN & 0.095^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumFARMERSVILLE & -0.029 \\ 
-  & (0.026) \\ 
-  & \\ 
- sys\_dumFERRIS & 0.0004 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumFORNEY & 0.014 \\ 
+ sys\_dumBIRDVILLE & 0.041^{**} \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumFORT WORTH & 0.141^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumFRISCO & 0.022 \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumGARLAND & 0.182^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumGARNER & -0.030 \\ 
+ sys\_dumBLAND & -0.002 \\ 
   & (0.031) \\ 
   & \\ 
- sys\_dumGLEN ROSE & -0.026 \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGODLEY & -0.049^{**} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumGORDON & -0.169^{***} \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumGRAFORD & -0.146^{***} \\ 
-  & (0.025) \\ 
-  & \\ 
- sys\_dumGRANBURY & 0.025 \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumGRAND PRAIRIE & 0.166^{***} \\ 
+ sys\_dumBLUE RIDGE & -0.023 \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumGRANDVIEW & -0.073^{***} \\ 
-  & (0.023) \\ 
+ sys\_dumBLUM & -0.353^{***} \\ 
+  & (0.027) \\ 
   & \\ 
- sys\_dumGRAPEVINE-COLLEYVILLE & 0.099^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumGREENVILLE & 0.120^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumGROESBECK & -0.121^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumGUNTER & -0.063^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumHARLANDALE & 0.005 \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumHEB & 0.171^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumHICO & -0.079^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumHIGHLAND PARK & 0.028 \\ 
+ sys\_dumBOWIE & 0.010 \\ 
   & (0.018) \\ 
   & \\ 
- sys\_dumHONEY GROVE & -0.055^{**} \\ 
-  & (0.022) \\ 
+ sys\_dumBOYD & -0.113^{***} \\ 
+  & (0.018) \\ 
   & \\ 
- sys\_dumHUCKABAY & -0.177^{***} \\ 
-  & (0.036) \\ 
+ sys\_dumBRIDGEPORT & -0.072^{***} \\ 
+  & (0.017) \\ 
   & \\ 
- sys\_dumIREDELE & -0.216^{***} \\ 
-  & (0.029) \\ 
-  & \\ 
- sys\_dumIRVING & 0.122^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumITASCA & -0.038 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumJACKSBORO & -0.068^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumJOSHUA & 0.025 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumJUDSON & 0.058^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumKELLER & 0.133^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumKENNEDALE & 0.040^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumKILLEEN & 0.229^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumKRUM & -0.022 \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumLA VEGA & -0.103^{***} \\ 
+ sys\_dumBROCK & 0.026 \\ 
   & (0.027) \\ 
   & \\ 
- sys\_dumLA VERNIA & -0.042^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumLAKE DALLAS & 0.034 \\ 
-  & (0.026) \\ 
-  & \\ 
- sys\_dumLAKE WORTH & 0.004 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumLANCASTER & 0.079^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumLEONARD & -0.050^{**} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumLEWISVILLE & 0.145^{***} \\ 
+ sys\_dumBURLESON & 0.022 \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumLINDSAY & -0.016 \\ 
+ sys\_dumCARROLL & 0.017 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCARROLLTON & 0.018 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumCASTLEBERRY & 0.041^{**} \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumCEDAR HILL & -0.001 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCELESTE & 0.023 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumCELINA & -0.010 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumCHICO & -0.110^{***} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumCLEBURNE & 0.019 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumCOLLINSVILLE & -0.039^{*} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumCOMANCHE & -0.391^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumCOMMUNITY & -0.032 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumCOMO-PICKTON & -0.089^{***} \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumLINGLEVILLE & -0.205^{***} \\ 
-  & (0.036) \\ 
+ sys\_dumCOPPELL & -0.032^{*} \\ 
+  & (0.019) \\ 
   & \\ 
- sys\_dumLITTLE ELM & -0.004 \\ 
-  & (0.025) \\ 
+ sys\_dumCRANDALL & -0.008 \\ 
+  & (0.017) \\ 
   & \\ 
- sys\_dumLOVEJOY & 0.099^{***} \\ 
+ sys\_dumCROWLEY & 0.062^{***} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumDALLAS & 0.018 \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumDE LEON & -0.363^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumDE SOTO & 0.019 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumDECATUR & -0.118^{***} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumDENTON & 0.028 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumDUBLIN & -0.340^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumDUNCANVILLE & 0.045^{**} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumEAGLE MOUNTAIN-SAGINAW & 0.023 \\ 
+  & (0.017) \\ 
+  & \\ 
+ sys\_dumEAST CENTRAL & -0.647^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumECTOR & 0.069^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumEDGEWOOD & -0.706^{***} \\ 
+  & (0.047) \\ 
+  & \\ 
+ sys\_dumENNIS & 0.007 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumERA & 0.035 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumEUSTACE & -0.246^{***} \\ 
+  & (0.030) \\ 
+  & \\ 
+ sys\_dumEVERMAN & 0.040^{**} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumFARMERSVILLE & -0.031 \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumFERRIS & -0.039^{**} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumFORNEY & -0.005 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumFORT WORTH & 0.017 \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumFRISCO & -0.006 \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumGARLAND & 0.053^{**} \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumGARNER & 0.017 \\ 
   & (0.029) \\ 
   & \\ 
- sys\_dumMABANK & 0.011 \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumMANSFIELD & 0.077^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumMARLIN & -0.131^{***} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumMAYPEARL & 0.002 \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumMCKINNEY & 0.102^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumMESQUITE & 0.185^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumMIDLOTHIAN & 0.029 \\ 
+ sys\_dumGLEN ROSE & -0.057^{***} \\ 
   & (0.019) \\ 
   & \\ 
- sys\_dumMILFORD & -0.097^{***} \\ 
-  & (0.026) \\ 
+ sys\_dumGODLEY & -0.031 \\ 
+  & (0.023) \\ 
   & \\ 
- sys\_dumMILLER GROVE & -0.059^{**} \\ 
-  & (0.028) \\ 
+ sys\_dumGORDON & 0.203^{***} \\ 
+  & (0.031) \\ 
   & \\ 
- sys\_dumMILLSAP & 0.057^{**} \\ 
-  & (0.024) \\ 
+ sys\_dumGRAFORD & 0.255^{***} \\ 
+  & (0.032) \\ 
   & \\ 
- sys\_dumMINERAL WELLS & 0.068^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumMORGAN & -0.070^{***} \\ 
+ sys\_dumGRANBURY & -0.024 \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumMORGAN MILL & -0.147^{***} \\ 
-  & (0.028) \\ 
-  & \\ 
- sys\_dumMOUNT VERNON & -0.026 \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumNORTH EAST & 0.153^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumNORTHSIDE & 0.126^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumPALMER & 0.027 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumPARADISE & -0.134^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumPARIS & 0.084^{***} \\ 
+ sys\_dumGRAND PRAIRIE & 0.057^{***} \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumPEASTER & 0.203^{***} \\ 
-  & (0.037) \\ 
+ sys\_dumGRANDVIEW & -0.077^{***} \\ 
+  & (0.021) \\ 
   & \\ 
- sys\_dumPERRIN-WHITT & -0.059^{**} \\ 
-  & (0.023) \\ 
+ sys\_dumGRAPEVINE-COLLEYVILLE & 0.031^{*} \\ 
+  & (0.019) \\ 
   & \\ 
- sys\_dumPLANO & 0.162^{***} \\ 
-  & (0.022) \\ 
+ sys\_dumGREENVILLE & 0.043^{**} \\ 
+  & (0.019) \\ 
   & \\ 
- sys\_dumPOOLVILLE & 0.196^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumPOTTSBORO & 0.013 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumPRINCETON & 0.034^{*} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumPROSPER & 0.051^{**} \\ 
+ sys\_dumGROESBECK & -0.395^{***} \\ 
   & (0.025) \\ 
   & \\ 
- sys\_dumRED OAK & 0.099^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumRICHARDSON & 0.157^{***} \\ 
+ sys\_dumGUNTER & -0.037^{*} \\ 
   & (0.022) \\ 
   & \\ 
- sys\_dumRIO VISTA & -0.041^{**} \\ 
-  & (0.019) \\ 
+ sys\_dumHARLANDALE & -0.778^{***} \\ 
+  & (0.046) \\ 
   & \\ 
- sys\_dumSALADO & -0.159^{***} \\ 
+ sys\_dumHEB & 0.067^{***} \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumSAN ANTONIO & 0.056^{**} \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumSANGER & 0.018 \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumSANTO & -0.086^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumSAVOY & -0.080^{***} \\ 
+ sys\_dumHICO & -0.320^{***} \\ 
   & (0.027) \\ 
   & \\ 
- sys\_dumSHERMAN & 0.115^{***} \\ 
-  & (0.021) \\ 
+ sys\_dumHIGHLAND PARK & -0.002 \\ 
+  & (0.017) \\ 
   & \\ 
- sys\_dumSOMERSET & -0.088^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumSOUTHSIDE & 0.085^{***} \\ 
+ sys\_dumHONEY GROVE & -0.053^{***} \\ 
   & (0.020) \\ 
   & \\ 
- sys\_dumSOUTHWEST & 0.095^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumSPRINGTOWN & 0.009 \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumSTEPHENVILLE & 0.048^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumSTRAWN & -0.218^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumSULPHER SPRNG & 0.064^{***} \\ 
-  & (0.021) \\ 
-  & \\ 
- sys\_dumSUNNYVALE & -0.075^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumTEMPLE & -0.049^{**} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumTERRELL & 0.083^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumTOLAR & -0.058^{**} \\ 
-  & (0.026) \\ 
-  & \\ 
- sys\_dumVALLEY VIEW & 0.003 \\ 
+ sys\_dumHUCKABAY & -0.364^{***} \\ 
   & (0.036) \\ 
   & \\ 
- sys\_dumVENUS & -0.062^{**} \\ 
-  & (0.026) \\ 
+ sys\_dumIREDELE & -0.375^{***} \\ 
+  & (0.031) \\ 
   & \\ 
- sys\_dumWALNUT SPRGS & -0.174^{***} \\ 
-  & (0.024) \\ 
-  & \\ 
- sys\_dumWAXAHACHIE & 0.074^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWEATHERFORD & 0.060^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumWHITE SETTLEMENT & 0.048^{**} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWHITESBORO & 0.091^{***} \\ 
-  & (0.019) \\ 
-  & \\ 
- sys\_dumWHITNEY & -0.053^{***} \\ 
-  & (0.020) \\ 
-  & \\ 
- sys\_dumWILMER-HUTCHINS & 0.111^{***} \\ 
-  & (0.022) \\ 
-  & \\ 
- sys\_dumWOLFE CITY & -0.009 \\ 
+ sys\_dumIRVING & 0.013 \\ 
   & (0.021) \\ 
   & \\ 
- sys\_dumWYLIE & 0.020 \\ 
-  & (0.023) \\ 
-  & \\ 
- sys\_dumYANTIS & -0.082^{***} \\ 
+ sys\_dumITASCA & -0.280^{***} \\ 
   & (0.026) \\ 
   & \\ 
- Constant & -1.676^{***} \\ 
-  & (0.115) \\ 
+ sys\_dumJACKSBORO & -0.335^{***} \\ 
+  & (0.027) \\ 
+  & \\ 
+ sys\_dumJOSHUA & 0.006 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumJUDSON & -0.720^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumKELLER & 0.063^{***} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumKENNEDALE & 0.010 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumKILLEEN & -0.133^{***} \\ 
+  & (0.026) \\ 
+  & \\ 
+ sys\_dumKRUM & -0.020 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumLA VEGA & -0.389^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumLA VERNIA & -0.719^{***} \\ 
+  & (0.044) \\ 
+  & \\ 
+ sys\_dumLAKE DALLAS & 0.011 \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumLAKE WORTH & -0.020 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumLANCASTER & 0.016 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumLEONARD & -0.032 \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumLEWISVILLE & 0.043^{**} \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumLINDSAY & 0.005 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumLINGLEVILLE & -0.394^{***} \\ 
+  & (0.036) \\ 
+  & \\ 
+ sys\_dumLITTLE ELM & -0.010 \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumLOVEJOY & 0.135^{***} \\ 
+  & (0.027) \\ 
+  & \\ 
+ sys\_dumMABANK & -0.034 \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumMANSFIELD & 0.004 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumMARLIN & -0.417^{***} \\ 
+  & (0.026) \\ 
+  & \\ 
+ sys\_dumMAYPEARL & 0.019 \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumMCKINNEY & 0.028 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumMESQUITE & 0.059^{**} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumMIDLOTHIAN & -0.011 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumMILFORD & -0.064^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumMILLER GROVE & -0.008 \\ 
+  & (0.026) \\ 
+  & \\ 
+ sys\_dumMILLSAP & 0.077^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumMINERAL WELLS & 0.357^{***} \\ 
+  & (0.028) \\ 
+  & \\ 
+ sys\_dumMORGAN & -0.293^{***} \\ 
+  & (0.025) \\ 
+  & \\ 
+ sys\_dumMORGAN MILL & -0.324^{***} \\ 
+  & (0.030) \\ 
+  & \\ 
+ sys\_dumMOUNT VERNON & -0.043^{**} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumNORTH EAST & -0.662^{***} \\ 
+  & (0.047) \\ 
+  & \\ 
+ sys\_dumNORTHSIDE & -0.696^{***} \\ 
+  & (0.047) \\ 
+  & \\ 
+ sys\_dumPALMER & 0.020 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumPARADISE & -0.129^{***} \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumPARIS & 0.022 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumPEASTER & 0.251^{***} \\ 
+  & (0.034) \\ 
+  & \\ 
+ sys\_dumPERRIN-WHITT & -0.298^{***} \\ 
+  & (0.026) \\ 
+  & \\ 
+ sys\_dumPLANO & 0.057^{***} \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumPOOLVILLE & 0.213^{***} \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumPOTTSBORO & -0.008 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumPRINCETON & 0.0004 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumPROSPER & 0.069^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumRED OAK & 0.044^{**} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumRICHARDSON & 0.053^{**} \\ 
+  & (0.021) \\ 
+  & \\ 
+ sys\_dumRIO VISTA & -0.031^{*} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumSALADO & -0.391^{***} \\ 
+  & (0.024) \\ 
+  & \\ 
+ sys\_dumSAN ANTONIO & -0.745^{***} \\ 
+  & (0.046) \\ 
+  & \\ 
+ sys\_dumSANGER & -0.013 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumSANTO & 0.277^{***} \\ 
+  & (0.029) \\ 
+  & \\ 
+ sys\_dumSAVOY & -0.053^{**} \\ 
+  & (0.025) \\ 
+  & \\ 
+ sys\_dumSHERMAN & 0.018 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumSOMERSET & -0.780^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumSOUTHSIDE & -0.681^{***} \\ 
+  & (0.045) \\ 
+  & \\ 
+ sys\_dumSOUTHWEST & -0.687^{***} \\ 
+  & (0.046) \\ 
+  & \\ 
+ sys\_dumSPRINGTOWN & -0.027 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumSTEPHENVILLE & -0.231^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumSTRAWN & 0.174^{***} \\ 
+  & (0.031) \\ 
+  & \\ 
+ sys\_dumSULPHER SPRNG & 0.004 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumSUNNYVALE & -0.028 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumTEMPLE & -0.382^{***} \\ 
+  & (0.026) \\ 
+  & \\ 
+ sys\_dumTERRELL & 0.024 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumTOLAR & -0.035 \\ 
+  & (0.025) \\ 
+  & \\ 
+ sys\_dumVALLEY VIEW & 0.015 \\ 
+  & (0.033) \\ 
+  & \\ 
+ sys\_dumVENUS & -0.031 \\ 
+  & (0.025) \\ 
+  & \\ 
+ sys\_dumWALNUT SPRGS & -0.391^{***} \\ 
+  & (0.027) \\ 
+  & \\ 
+ sys\_dumWAXAHACHIE & 0.009 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumWEATHERFORD & 0.002 \\ 
+  & (0.019) \\ 
+  & \\ 
+ sys\_dumWHITE SETTLEMENT & 0.005 \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumWHITESBORO & 0.080^{***} \\ 
+  & (0.018) \\ 
+  & \\ 
+ sys\_dumWHITNEY & -0.296^{***} \\ 
+  & (0.023) \\ 
+  & \\ 
+ sys\_dumWILMER-HUTCHINS & 0.024 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumWOLFE CITY & 0.017 \\ 
+  & (0.020) \\ 
+  & \\ 
+ sys\_dumWYLIE & -0.018 \\ 
+  & (0.022) \\ 
+  & \\ 
+ sys\_dumYANTIS & -0.057^{**} \\ 
+  & (0.024) \\ 
+  & \\ 
+ Constant & -58.094^{***} \\ 
+  & (3.311) \\ 
   & \\ 
 \hline \\[-1.8ex] 
 Observations & \multicolumn{1}{c}{11,614} \\ 
-R$^{2}$ & \multicolumn{1}{c}{0.435} \\ 
-Adjusted R$^{2}$ & \multicolumn{1}{c}{0.427} \\ 
-Residual Std. Error & \multicolumn{1}{c}{0.077 (df = 11449)} \\ 
-F Statistic & \multicolumn{1}{c}{53.840$^{***}$ (df = 164; 11449)} \\ 
+R$^{2}$ & \multicolumn{1}{c}{0.514} \\ 
+Adjusted R$^{2}$ & \multicolumn{1}{c}{0.507} \\ 
+Residual Std. Error & \multicolumn{1}{c}{0.071 (df = 11432)} \\ 
+F Statistic & \multicolumn{1}{c}{66.878$^{***}$ (df = 181; 11432)} \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
