created plots and fixed regressions

--- a/output/table6_RE.tex
+++ b/output/table6_RE.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Wed, Jun 20, 2018 - 04:20:16 PM
+% Date and time: Fri, Jun 22, 2018 - 10:42:23 AM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Table 6 Results RE} 
@@ -12,44 +12,44 @@
 \cline{2-2} 
 \\[-1.8ex] & \multicolumn{1}{c}{lbid} \\ 
 \hline \\[-1.8ex] 
- inc & -0.056^{***} \\ 
+ inc & -0.065^{***} \\ 
   & (0.002) \\ 
   & \\ 
  type\_dumlfc & -0.003^{*} \\ 
   & (0.002) \\ 
   & \\ 
  type\_dumlfw & -0.048^{***} \\ 
-  & (0.002) \\ 
+  & (0.001) \\ 
   & \\ 
  type\_dumwc & 0.052^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lfmo & 1.841^{***} \\ 
-  & (0.216) \\ 
+ lfmo & 0.348^{***} \\ 
+  & (0.037) \\ 
   & \\ 
- lestqty & -0.011^{***} \\ 
-  & (0.003) \\ 
+ lestqty & -0.007^{*} \\ 
+  & (0.004) \\ 
   & \\ 
- lnostop & -0.032^{**} \\ 
-  & (0.013) \\ 
+ lnostop & -0.025^{*} \\ 
+  & (0.015) \\ 
   & \\ 
- lback & -0.008^{***} \\ 
+ lback & -0.005^{***} \\ 
   & (0.001) \\ 
   & \\ 
- esc & -0.017^{***} \\ 
+ esc & -0.013^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lnum & 0.003 \\ 
-  & (0.002) \\ 
+ lnum & -0.004 \\ 
+  & (0.005) \\ 
   & \\ 
- Constant & -6.409^{***} \\ 
-  & (0.566) \\ 
+ Constant & -2.488^{***} \\ 
+  & (0.118) \\ 
   & \\ 
 \hline \\[-1.8ex] 
-Observations & \multicolumn{1}{c}{11,614} \\ 
-Log Likelihood & \multicolumn{1}{c}{13,701.780} \\ 
-Akaike Inf. Crit. & \multicolumn{1}{c}{-27,375.550} \\ 
-Bayesian Inf. Crit. & \multicolumn{1}{c}{-27,272.510} \\ 
+Observations & \multicolumn{1}{c}{10,698} \\ 
+Log Likelihood & \multicolumn{1}{c}{13,757.790} \\ 
+Akaike Inf. Crit. & \multicolumn{1}{c}{-27,487.580} \\ 
+Bayesian Inf. Crit. & \multicolumn{1}{c}{-27,385.690} \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
