--- a/output/table5_RE.tex
+++ b/output/table5_RE.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Wed, Jun 20, 2018 - 04:20:14 PM
+% Date and time: Fri, Jun 22, 2018 - 10:42:21 AM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Table 5 Results RE} 
@@ -12,65 +12,65 @@
 \cline{2-2} 
 \\[-1.8ex] & \multicolumn{1}{c}{lbid} \\ 
 \hline \\[-1.8ex] 
- inc & -0.419^{***} \\ 
-  & (0.099) \\ 
+ inc & -0.678^{***} \\ 
+  & (0.101) \\ 
   & \\ 
- type\_dumlfc & -0.005^{**} \\ 
+ type\_dumlfc & -0.004^{**} \\ 
   & (0.002) \\ 
   & \\ 
- type\_dumlfw & -0.049^{***} \\ 
+ type\_dumlfw & -0.048^{***} \\ 
   & (0.002) \\ 
   & \\ 
  type\_dumwc & 0.051^{***} \\ 
   & (0.002) \\ 
   & \\ 
- lfmo & 1.601^{***} \\ 
-  & (0.198) \\ 
-  & \\ 
- lqstop & -0.012^{***} \\ 
-  & (0.003) \\ 
-  & \\ 
- lback & -0.009^{***} \\ 
-  & (0.001) \\ 
-  & \\ 
- esc & -0.017^{***} \\ 
-  & (0.002) \\ 
-  & \\ 
- lnum & 0.009^{***} \\ 
-  & (0.003) \\ 
-  & \\ 
- inc:type\_dumlfc & 0.009^{*} \\ 
-  & (0.005) \\ 
-  & \\ 
- inc:type\_dumlfw & 0.004 \\ 
-  & (0.005) \\ 
-  & \\ 
- inc:type\_dumwc & 0.004 \\ 
-  & (0.005) \\ 
-  & \\ 
- inc:lfmo & 0.158^{***} \\ 
+ lfmo & 0.279^{***} \\ 
   & (0.037) \\ 
   & \\ 
- inc:lqstop & -0.005^{**} \\ 
-  & (0.002) \\ 
-  & \\ 
- inc:lback & 0.004^{***} \\ 
-  & (0.002) \\ 
-  & \\ 
- inc:esc & 0.0002 \\ 
+ lqstop & -0.008^{**} \\ 
   & (0.004) \\ 
   & \\ 
- inc:lnum & -0.023^{***} \\ 
+ lback & -0.005^{***} \\ 
+  & (0.001) \\ 
+  & \\ 
+ esc & -0.012^{***} \\ 
+  & (0.002) \\ 
+  & \\ 
+ lnum & 0.003 \\ 
+  & (0.005) \\ 
+  & \\ 
+ inc:type\_dumlfc & 0.006 \\ 
   & (0.004) \\ 
   & \\ 
- Constant & -5.975^{***} \\ 
-  & (0.521) \\ 
+ inc:type\_dumlfw & 0.001 \\ 
+  & (0.004) \\ 
+  & \\ 
+ inc:type\_dumwc & 0.005 \\ 
+  & (0.004) \\ 
+  & \\ 
+ inc:lfmo & 0.262^{***} \\ 
+  & (0.037) \\ 
+  & \\ 
+ inc:lqstop & -0.009^{***} \\ 
+  & (0.002) \\ 
+  & \\ 
+ inc:lback & 0.0005 \\ 
+  & (0.002) \\ 
+  & \\ 
+ inc:esc & -0.005 \\ 
+  & (0.004) \\ 
+  & \\ 
+ inc:lnum & -0.019^{***} \\ 
+  & (0.005) \\ 
+  & \\ 
+ Constant & -2.460^{***} \\ 
+  & (0.103) \\ 
   & \\ 
 \hline \\[-1.8ex] 
-Observations & \multicolumn{1}{c}{11,614} \\ 
-Log Likelihood & \multicolumn{1}{c}{13,700.690} \\ 
-Akaike Inf. Crit. & \multicolumn{1}{c}{-27,359.380} \\ 
-Bayesian Inf. Crit. & \multicolumn{1}{c}{-27,204.820} \\ 
+Observations & \multicolumn{1}{c}{10,698} \\ 
+Log Likelihood & \multicolumn{1}{c}{13,770.520} \\ 
+Akaike Inf. Crit. & \multicolumn{1}{c}{-27,499.030} \\ 
+Bayesian Inf. Crit. & \multicolumn{1}{c}{-27,346.200} \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
