realized standard errors in R were fine

--- a/output/table5_RE.tex
+++ b/output/table5_RE.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Fri, Jun 22, 2018 - 10:42:21 AM
+% Date and time: Sat, Jun 23, 2018 - 06:33:40 PM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Table 5 Results RE} 
@@ -14,59 +14,41 @@
 \hline \\[-1.8ex] 
  inc & -0.678^{***} \\ 
   & (0.101) \\ 
-  & \\ 
- type\_dumlfc & -0.004^{**} \\ 
+  type\_dumlfc & -0.004^{**} \\ 
   & (0.002) \\ 
-  & \\ 
- type\_dumlfw & -0.048^{***} \\ 
+  type\_dumlfw & -0.048^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- type\_dumwc & 0.051^{***} \\ 
+  type\_dumwc & 0.051^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- lfmo & 0.279^{***} \\ 
+  lfmo & 0.279^{***} \\ 
   & (0.037) \\ 
-  & \\ 
- lqstop & -0.008^{**} \\ 
+  lqstop & -0.008^{**} \\ 
   & (0.004) \\ 
-  & \\ 
- lback & -0.005^{***} \\ 
+  lback & -0.005^{***} \\ 
   & (0.001) \\ 
-  & \\ 
- esc & -0.012^{***} \\ 
+  esc & -0.012^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- lnum & 0.003 \\ 
+  lnum & 0.003 \\ 
   & (0.005) \\ 
-  & \\ 
- inc:type\_dumlfc & 0.006 \\ 
+  inc:type\_dumlfc & 0.006 \\ 
   & (0.004) \\ 
-  & \\ 
- inc:type\_dumlfw & 0.001 \\ 
+  inc:type\_dumlfw & 0.001 \\ 
   & (0.004) \\ 
-  & \\ 
- inc:type\_dumwc & 0.005 \\ 
+  inc:type\_dumwc & 0.005 \\ 
   & (0.004) \\ 
-  & \\ 
- inc:lfmo & 0.262^{***} \\ 
+  inc:lfmo & 0.262^{***} \\ 
   & (0.037) \\ 
-  & \\ 
- inc:lqstop & -0.009^{***} \\ 
+  inc:lqstop & -0.009^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- inc:lback & 0.0005 \\ 
+  inc:lback & 0.0005 \\ 
   & (0.002) \\ 
-  & \\ 
- inc:esc & -0.005 \\ 
+  inc:esc & -0.005 \\ 
   & (0.004) \\ 
-  & \\ 
- inc:lnum & -0.019^{***} \\ 
+  inc:lnum & -0.019^{***} \\ 
   & (0.005) \\ 
-  & \\ 
- Constant & -2.460^{***} \\ 
+  Constant & -2.460^{***} \\ 
   & (0.103) \\ 
-  & \\ 
-\hline \\[-1.8ex] 
+ \hline \\[-1.8ex] 
 Observations & \multicolumn{1}{c}{10,698} \\ 
 Log Likelihood & \multicolumn{1}{c}{13,770.520} \\ 
 Akaike Inf. Crit. & \multicolumn{1}{c}{-27,499.030} \\ 
