--- a/output/table6_RE.tex
+++ b/output/table6_RE.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Fri, Jun 22, 2018 - 10:42:23 AM
+% Date and time: Sat, Jun 23, 2018 - 06:33:41 PM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Table 6 Results RE} 
@@ -14,38 +14,27 @@
 \hline \\[-1.8ex] 
  inc & -0.065^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- type\_dumlfc & -0.003^{*} \\ 
+  type\_dumlfc & -0.003^{*} \\ 
   & (0.002) \\ 
-  & \\ 
- type\_dumlfw & -0.048^{***} \\ 
+  type\_dumlfw & -0.048^{***} \\ 
   & (0.001) \\ 
-  & \\ 
- type\_dumwc & 0.052^{***} \\ 
+  type\_dumwc & 0.052^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- lfmo & 0.348^{***} \\ 
+  lfmo & 0.348^{***} \\ 
   & (0.037) \\ 
-  & \\ 
- lestqty & -0.007^{*} \\ 
+  lestqty & -0.007^{*} \\ 
   & (0.004) \\ 
-  & \\ 
- lnostop & -0.025^{*} \\ 
+  lnostop & -0.025^{*} \\ 
   & (0.015) \\ 
-  & \\ 
- lback & -0.005^{***} \\ 
+  lback & -0.005^{***} \\ 
   & (0.001) \\ 
-  & \\ 
- esc & -0.013^{***} \\ 
+  esc & -0.013^{***} \\ 
   & (0.002) \\ 
-  & \\ 
- lnum & -0.004 \\ 
+  lnum & -0.004 \\ 
   & (0.005) \\ 
-  & \\ 
- Constant & -2.488^{***} \\ 
+  Constant & -2.488^{***} \\ 
   & (0.118) \\ 
-  & \\ 
-\hline \\[-1.8ex] 
+ \hline \\[-1.8ex] 
 Observations & \multicolumn{1}{c}{10,698} \\ 
 Log Likelihood & \multicolumn{1}{c}{13,757.790} \\ 
 Akaike Inf. Crit. & \multicolumn{1}{c}{-27,487.580} \\ 
