--- a/output/tables.tex
+++ b/output/tables.tex
@@ -33,14 +33,20 @@
 \begin{document}
 
 
-\input{table5_RE}
+\input{\string~/Documents/tx_milk/output/tables/table5}
 
+\input{\string~/Documents/tx_milk/output/tables/table6}
 
-\input{table6_RE}
+\input{\string~/Documents/tx_milk/output/tables/table6m}
 
+\input{\string~/Documents/tx_milk/output/tablesSA/table5}
 
+\input{\string~/Documents/tx_milk/output/tablesSA/table6}
 
-\input{table6_m}
+\input{\string~/Documents/tx_milk/output/tablesSA/table6m}
+
+\input{\string~/Documents/tx_milk/output/tablesSA/table10}
+
 
 
 \end{document}\grid
