added new tables

--- a/output/tables.tex
+++ b/output/tables.tex
@@ -32,12 +32,17 @@
 
 \begin{document}
 
+\section{Main Tables all Observations}
 
 \input{\string~/Documents/tx_milk/output/tables/table5}
 
 \input{\string~/Documents/tx_milk/output/tables/table6}
 
 \input{\string~/Documents/tx_milk/output/tables/table6m}
+
+\pagebreak
+
+\section{San Antonio Tables}
 
 \input{\string~/Documents/tx_milk/output/tablesSA/table5}
 
@@ -46,6 +51,29 @@
 \input{\string~/Documents/tx_milk/output/tablesSA/table6m}
 
 \input{\string~/Documents/tx_milk/output/tablesSA/table10}
+
+\pagebreak
+
+\section{Main Tables with Filtered Observations}
+
+
+\input{\string~/Documents/tx_milk/output/tablesC/table5}
+
+\input{\string~/Documents/tx_milk/output/tablesC/table6}
+
+\input{\string~/Documents/tx_milk/output/tablesC/table6m}
+
+\pagebreak
+
+\section{San Antonio Tables with Filtered Observations}
+
+\input{\string~/Documents/tx_milk/output/tablesSAC/table5}
+
+\input{\string~/Documents/tx_milk/output/tablesSAC/table6}
+
+\input{\string~/Documents/tx_milk/output/tablesSAC/table6m}
+
+\input{\string~/Documents/tx_milk/output/tablesSAC/table10}
 
 
 
