--- a/output/tables.tex
+++ b/output/tables.tex
@@ -32,50 +32,29 @@
 
 \begin{document}
 
-\section{Main Tables all Observations}
-
-\input{\string~/Documents/tx_milk/output/tables/table5}
-
-\input{\string~/Documents/tx_milk/output/tables/table6}
+\section{Main Tables (All Available Data)}
 
 \input{\string~/Documents/tx_milk/output/tables/table6m}
 
-\pagebreak
-
-\section{San Antonio Tables}
-
-\input{\string~/Documents/tx_milk/output/tablesSA/table5}
-
-\input{\string~/Documents/tx_milk/output/tablesSA/table6}
-
-\input{\string~/Documents/tx_milk/output/tablesSA/table6m}
-
-\input{\string~/Documents/tx_milk/output/tablesSA/table10}
+\input{\string~/Documents/tx_milk/output/tables/table5}
 
 \pagebreak
 
-\section{Main Tables with Filtered Observations}
+\section{Main Tables (Filtered Data)}
 
+\input{\string~/Documents/tx_milk/output/tables_f/table6m}
 
-\input{\string~/Documents/tx_milk/output/tablesC/table5}
-
-\input{\string~/Documents/tx_milk/output/tablesC/table6}
-
-\input{\string~/Documents/tx_milk/output/tablesC/table6m}
+\input{\string~/Documents/tx_milk/output/tables_f/table5}
 
 \pagebreak
 
-\section{San Antonio Tables with Filtered Observations}
+\section{San Antonio Tables (Filtered Data)}
 
-\input{\string~/Documents/tx_milk/output/tablesSAC/table5}
+\input{\string~/Documents/tx_milk/output/tables_saf/table10}
 
-\input{\string~/Documents/tx_milk/output/tablesSAC/table6}
+\input{\string~/Documents/tx_milk/output/tables_saf/table6m}
 
-\input{\string~/Documents/tx_milk/output/tablesSAC/table6m}
-
-\input{\string~/Documents/tx_milk/output/tablesSAC/table10}
-
-
+\input{\string~/Documents/tx_milk/output/tables_saf/table5}
 
 \end{document}\grid
 \grid
