--- a/output/tables.tex
+++ b/output/tables.tex
@@ -32,29 +32,30 @@
 
 \begin{document}
 
-\section{Main Tables (All Available Data)}
+\section{Reproduced Main Tables (1980-1991)}
 
-\input{\string~/Documents/tx_milk/output/tables/table6m}
+\input{\string~/Documents/tx_milk/output/tables/table6}
 
 \input{\string~/Documents/tx_milk/output/tables/table5}
 
 \pagebreak
 
-\section{Main Tables (Filtered Data)}
+\section{Reproduced San Antonio Tables (1988-1991)}
 
-\input{\string~/Documents/tx_milk/output/tables_f/table6m}
+\input{\string~/Documents/tx_milk/output/tables_sa/table10}
 
-\input{\string~/Documents/tx_milk/output/tables_f/table5}
+\input{\string~/Documents/tx_milk/output/tables_sa/table6}
 
 \pagebreak
 
-\section{San Antonio Tables (Filtered Data)}
+\section{Misspecified Models}
 
-\input{\string~/Documents/tx_milk/output/tables_saf/table10}
+\input{\string~/Documents/tx_milk/output/tables_m/table10}
 
-\input{\string~/Documents/tx_milk/output/tables_saf/table6m}
 
-\input{\string~/Documents/tx_milk/output/tables_saf/table5}
+\input{\string~/Documents/tx_milk/output/tables_m/table5}
+
+
 
 \end{document}\grid
 \grid
