--- a/output/tables.tex
+++ b/output/tables.tex
@@ -32,9 +32,9 @@
 
 \begin{document}
 
-\section{Reproduced Main Tables (1980-1991)}
+\section{Reproduced Tables All ISDs (1980-1991)}
 
-\input{\string~/Documents/tx_milk/output/tables/table6}
+\input{\string~/Documents/tx_milk/output/tables/table6m}
 
 \input{\string~/Documents/tx_milk/output/tables/table5}
 
@@ -48,12 +48,21 @@
 
 \pagebreak
 
-\section{Misspecified Models}
+\section{Reproduced Dallas Ft. Worth (1980-1991)}
 
-\input{\string~/Documents/tx_milk/output/tables_m/table10}
+\input{\string~/Documents/tx_milk/output/tables_da/table6}
 
+\input{\string~/Documents/tx_milk/output/tables_da/table5}
+
+\pagebreak
+
+\section{Reference for Questions}
+
+\input{\string~/Documents/tx_milk/output/tables_m/table6}
 
 \input{\string~/Documents/tx_milk/output/tables_m/table5}
+
+
 
 
 
