Eric forgot to commit...

--- a/output/tables.tex
+++ b/output/tables.tex
@@ -56,14 +56,11 @@
 
 \pagebreak
 
-\section{Reference for Questions}
+\section{San Antonio FMO Extensions}
 
-\input{\string~/Documents/tx_milk/output/tables_m/table6}
+\input{\string~/Documents/tx_milk/output/tables_m/table61}
 
-\input{\string~/Documents/tx_milk/output/tables_m/table5}
-
-
-
+\input{\string~/Documents/tx_milk/output/tables_m/table63}
 
 
 \end{document}\grid
