added a new line

--- a/tex/writeup.tex
+++ b/tex/writeup.tex
@@ -99,6 +99,10 @@ Consider the opponents strategy $p$. This also transitions infinitely often. Con
 
 Now consider a one shot deviation back to $p$. We can construct a strategy with the same pay-off using a finite automata.
 
+%need to bound the set of strategies, suppose infinitely many prices in the set -- infinitely often transition to new prices.
+
+%cost for adding a new 'price' to the set - makes it strictly dominated
+
 \section{Econometric model set up}
 
 $q_i = \beta *p_i \beta * p_{-i}  
