broke regresions into 2 files, still need to clean things up

--- a/output/ext/extension.tex
+++ b/output/ext/extension.tex
@@ -34,34 +34,22 @@
 
 \section{Reproduced Tables All ISDs (1980-1991)}
 
-\input{\string~/Documents/tx_milk/output/tables/table6m}
-
-\input{\string~/Documents/tx_milk/output/tables/table5}
-
+\input{\string~/Documents/tx_milk/output/ext/tables/table6}
 \pagebreak
 
-\section{Reproduced San Antonio Tables (1988-1991)}
-
-\input{\string~/Documents/tx_milk/output/tables_sa/table10}
-
-\input{\string~/Documents/tx_milk/output/tables_sa/table6}
-
+\input{\string~/Documents/tx_milk/output/ext/tables/table6fe}
 \pagebreak
 
-\section{Reproduced Dallas Ft. Worth (1980-1991)}
-
-\input{\string~/Documents/tx_milk/output/tables_dfw/table6}
-
-\input{\string~/Documents/tx_milk/output/tables_dfw/table5}
-
+\input{\string~/Documents/tx_milk/output/ext/tables/table6c}
 \pagebreak
 
-\section{San Antonio FMO Extensions}
-
-\input{\string~/Documents/tx_milk/output/tables_m/table61}
-
-\input{\string~/Documents/tx_milk/output/tables_m/table63}
-
+\input{\string~/Documents/tx_milk/output/ext/tables/table6ci}
+\begin{enumerate}
+\item[(1)] is observations from the Dallas Ft. Worth market
+\item[(2)] is observations from the San Antonio Market
+\item[(3)] is observations from all other markets (Austin, Waco, St. Angelo, etc)
+\end{enumerate}
+\pagebreak
 
 \end{document}\grid
 \grid
