--- a/output/ext/extension.tex
+++ b/output/ext/extension.tex
@@ -32,9 +32,14 @@
 
 \begin{document}
 
-\section{Reproduced Tables All ISDs (1980-1991)}
-
 \input{\string~/Documents/tx_milk/output/ext/tables/table6}
+
+\begin{enumerate}
+\item[(1)] is the pooled sample as a baseline
+\item[(2)] is observations from the Dallas Ft. Worth market
+\item[(3)] is observations from the San Antonio Market
+\item[(4)] is observations from all other markets (Austin and Waco)
+\end{enumerate}
 \pagebreak
 
 \input{\string~/Documents/tx_milk/output/ext/tables/table6fe}
@@ -43,12 +48,6 @@
 \input{\string~/Documents/tx_milk/output/ext/tables/table6c}
 \pagebreak
 
-\input{\string~/Documents/tx_milk/output/ext/tables/table6ci}
-\begin{enumerate}
-\item[(1)] is observations from the Dallas Ft. Worth market
-\item[(2)] is observations from the San Antonio Market
-\item[(3)] is observations from all other markets (Austin, Waco, St. Angelo, etc)
-\end{enumerate}
 \pagebreak
 
 \end{document}\grid
