--- a/output/ext/extension.tex
+++ b/output/ext/extension.tex
@@ -42,8 +42,8 @@
 \end{enumerate}
 \pagebreak
 
-\input{\string~/Documents/tx_milk/output/ext/tables/table6fe}
-\pagebreak
+%\input{\string~/Documents/tx_milk/output/ext/tables/table6fe}
+%\pagebreak
 
 \input{\string~/Documents/tx_milk/output/ext/tables/table6c}
 \pagebreak
