trying to replicate lee's result

--- a/output/ext/extension.tex
+++ b/output/ext/extension.tex
@@ -32,23 +32,28 @@
 
 \begin{document}
 
-\input{\string~/Documents/tx_milk/output/ext/tables/table6}
+\input{\string~/Documents/tx_milk/output/ext/tables/lee}
+\clearpage
 
+\input{\string~/Documents/tx_milk/output/ext/tables/table6w}
+\clearpage
+
+\input{\string~/Documents/tx_milk/output/ext/tables/table6}
 \begin{enumerate}
 \item[(1)] is the pooled sample as a baseline
 \item[(2)] is observations from the Dallas Ft. Worth market
 \item[(3)] is observations from the San Antonio Market
 \item[(4)] is observations from all other markets (Austin and Waco)
 \end{enumerate}
-\pagebreak
+\clearpage
 
 %\input{\string~/Documents/tx_milk/output/ext/tables/table6fe}
 %\pagebreak
 
 \input{\string~/Documents/tx_milk/output/ext/tables/table6c}
-\pagebreak
+\clearpage
 
-\pagebreak
+
 
 \end{document}\grid
 \grid
