--- a/output/ext/extension.tex
+++ b/output/ext/extension.tex
@@ -35,8 +35,28 @@
 \input{\string~/Documents/tx_milk/output/ext/tables/lee}
 \clearpage
 
+\input{\string~/Documents/tx_milk/output/ext/tables/fu}
+
+\begin{enumerate}
+\item[(1)] Fixed effects for year and system
+\item[(2)] Fixed effects for year, system, and vendor
+
+\end{enumerate}
 
 
+\clearpage
+
+\input{\string~/Documents/tx_milk/output/ext/tables/table6season}
+
+
+\begin{enumerate}
+\item[(1)] is the pooled sample as a baseline
+\item[(2)] is observations from the Dallas Ft. Worth market
+\item[(3)] is observations from the San Antonio Market
+\item[(4)] is observations from all other markets (Austin and Waco)
+\end{enumerate}
+
+\clearpage
 
 
 \end{document}\grid
