got nd interpolation working!

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,29 @@
     "import statsmodels.api as sm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scipy.interpolate import interp1d #pre written interpolation function"
+    "from scipy.interpolate import interp1d #pre written interpolation function\n",
+    "from scipy.interpolate import griddata\n",
+    "from scipy.interpolate import LinearNDInterpolator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2.]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.interpolate import LinearNDInterpolator\n",
+    "f= LinearNDInterpolator([ [1,1],[2,1],[1,2],[2,2] ], [0,1,1,2] )\n",
+    "print f([1,1.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +173,7 @@
     }
    ],
    "source": [
-    "def operator(initial_values, other_bids):\n",
+    "def operator(initial_values, initial_policies):\n",
     "    \"\"\"Calculate the value of the \n",
     "    Bellman operator in the value function\n",
     "    \n",
@@ -175,10 +211,10 @@
     "\n",
     "#initialize policy as something else\n",
     "foo_policy = lambda state: 5\n",
-    "foo_bids = [foo_policy]*(N-1)\n",
+    "foo_bids = [foo_policy]*(N)\n",
     "\n",
     "v0 = np.concatenate((np.zeros(5),2*np.ones(5)))\n",
-    "operator(v0, 6 + np.ones(N-1) )"
+    "operator(v0, foo_bids )"
    ]
   },
   {
